--- a/API/requirements.txt
+++ b/API/requirements.txt
@@ -11,22 +11,10 @@ pydantic-settings>=2.0.0
 python-multipart>=0.0.5
 aiofiles>=22.0.0
 
-# Authentication & Security
-python-jose[cryptography]>=3.3.0
-passlib[bcrypt]==1.7.4
-bcrypt==4.0.1
-
 # Configuration
 python-dotenv>=1.0.0
 
-# AI Services (pour plus tard)
-openai>=1.0.0
-anthropic>=0.3.0
-
-# Image processing
-pillow>=9.0.0
-opencv-python-headless>=4.5.0
-pytesseract>=0.3.0
-
-# HTTP requests
-requests>=2.28.0
+sqlalchemy>=2.0.0
+asyncpg>=0.28.0
+alembic>=1.12.0
+psycopg2-binary>=2.9.0
