--- a/APIv2/requirements.txt
+++ b/APIv2/requirements.txt
@@ -17,3 +17,9 @@ alembic>=1.14.0
 passlib[bcrypt]>=1.7.4
 python-jose[cryptography]>=3.3.0
 python-multipart>=0.0.6
+
+# Vectorization
+pgvector
+
+bcrypt==4.0.1
+passlib[bcrypt]==1.7.4
