--- a/APIv2/mypy.ini
+++ b/APIv2/mypy.ini
@@ -8,4 +8,4 @@ check_untyped_defs = True
 disallow_untyped_decorators = True
 
 # Ignorer le dossier migrations
-exclude = migrations/
+exclude = migrations/, test_connections.py
