--- a/APIv2/requirements.txt
+++ b/APIv2/requirements.txt
@@ -56,3 +56,4 @@ python-multipart>=0.0.6          # Déjà présent, pour FastAPI file uploads
 types-redis                      # Type hints pour Redis
 
 aiohttp
+starlette
