--- a/API/.env.example
+++ b/API/.env.example
@@ -17,5 +17,27 @@ DB_SSL_MODE=require
 
 # JWT Configuration
 JWT_SECRET_KEY=your-super-secret-jwt-key-256-bits-minimum
-JWT_ALGORITHM=HS256
-JWT_ACCESS_TOKEN_EXPIRE_MINUTES=30
+JWT_ACCESS_TOKEN_EXPIRE_MINUTES=240
+JWT_REFRESH_TOKEN_EXPIRE_DAYS=7
+
+# Azure Blob Storage
+AZURE_STORAGE_CONNECTION_STRING="YourConnectionString"
+AZURE_STORAGE_ACCOUNT=ACCOUNT
+AZURE_STORAGE_KEY=KEY
+AZURE_BLOB_CONTAINER_NAME=NAME
+
+# Redis
+REDIS_URL=URL
+
+REDIS_HOST=HOST
+REDIS_PORT=6380
+REDIS_PASSWORD=PASSWORD
+REDIS_SSL=true
+
+# OpenAI
+AZURE_OPENAI_API_KEY=KEY
+AZURE_OPENAI_ENDPOINT=ENDPOINT
+AZURE_OPENAI_VISION_DEPLOYMENT=MODEL
+AZURE_OPENAI_VISION_API_VERSION=MODEL
+AZURE_OPENAI_EMBEDDING_DEPLOYMENT=MODEL
+AZURE_OPENAI_EMBEDDING_API_VERSION=VERSION
