--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8
+          pip install pytest
           # Installe les libs du projet si le fichier existe
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
@@ -30,3 +31,28 @@ jobs:
         run: |
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
+  test:
+    name: Tests unitaires
+    runs-on: ubuntu-latest
+    needs: lint
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Configuration python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Installation des dépendances
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest
+          # Installe les libs du projet si le fichier existe
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+      - name: exécution de pytest
+        run: |
+          pytest -v
