--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           # Dépendances système pour PyMuPDF (fitz)
-          sudo apt-get update && sudo apt-get install -y libgl1-mesa-glx
+          sudo apt-get update && sudo apt-get install -y libgl1
           pip install flake8
-          pip install pytest
           # Installe les libs du projet si le fichier existe
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
@@ -52,7 +51,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           # Dépendances système pour PyMuPDF (fitz)
-          sudo apt-get update && sudo apt-get install -y libgl1-mesa-glx
+          sudo apt-get update && sudo apt-get install -y libgl1
           pip install pytest
           # Installe les libs du projet si le fichier existe
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
