--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,3 +62,33 @@ jobs:
         run: |
           export PYTHONPATH=$PYTHONPATH:.
                 pytest API/tests/services/test_jwt_service.py
+        
+  docker:
+    name: Build and push Docker image
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Config Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./API
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/gaming-advisor:latest
+
+
+    
+
+    
