--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,6 +87,24 @@ jobs:
           context: ./API
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/gaming-advisor:latest
+        
+  deploy:
+    name: Déploiement vers Azure
+    runs-on: ubuntu-latest
+    needs: docker 
+    
+
+    if: github.event_name == 'push' 
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Déploiement sur Azure Web App
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: 'Gamin-Advisor' 
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
 
 
     
