--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,20 +91,24 @@ jobs:
   deploy:
     name: Déploiement vers Azure
     runs-on: ubuntu-latest
-    needs: docker 
-    
-
-    if: github.event_name == 'push' 
+    needs: docker
+    if: github.event_name == 'push'
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
+
+      - name: Connexion à Azure
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+
       - name: Déploiement sur Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'Gamin-Advisor' 
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          app-name: 'Gamin-Advisor'
 
 
     
